--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,3 +22,19 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery-item {
+  flex: 0 0 200px;
+  margin: 10px;
+}
+
+.gallery-item img {
+  width: 800px;
+  height: auto;
+}
